Bug 37713 - [4.4 Regression] ice for legal code with -O3 on 20080926
Summary: [4.4 Regression] ice for legal code with -O3 on 20080926
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.4.0
: P3 normal
Target Milestone: 4.4.0
Assignee: Richard Biener
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2008-10-02 09:02 UTC by David Binderman
Modified: 2008-10-07 11:25 UTC (History)
2 users (show)

See Also:
Host: suse-linux-x86_64
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2008-10-02 11:19:26


Attachments
C source code (40.32 KB, text/plain)
2008-10-02 09:04 UTC, David Binderman
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Binderman 2008-10-02 09:02:43 UTC
I just tried to compile the Suse Linux package libbtctl-0.10.0
with the new gcc version 4.4, snapshot dated 20080926.

gcc said

obexsdp.c: In function 'register_sdp':
obexsdp.c:128: internal compiler error: in vectorizable_store, at tree-vect-transform.c:5391
Please submit a full bug report,
with preprocessed source if appropriate.
See <http://gcc.gnu.org/bugs.html> for instructions.

Preprocessed source code attached. Flag -O3 required.
Comment 1 David Binderman 2008-10-02 09:04:23 UTC
Created attachment 16450 [details]
C source code
Comment 2 Richard Biener 2008-10-02 11:19:26 UTC
Confirmed.  Mine.
Comment 3 Richard Biener 2008-10-02 13:11:40 UTC
Fixed.
Comment 4 Richard Biener 2008-10-02 13:12:34 UTC
Subject: Bug 37713

Author: rguenth
Date: Thu Oct  2 13:11:12 2008
New Revision: 140832

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=140832
Log:
2008-10-02  Richard Guenther  <rguenther@suse.de>

	PR middle-end/37713
	* tree-ssa.c (useless_type_conversion_p_1): For COMPLEX_TYPE
	and VECTOR_TYPE recurse with useless_type_conversion_p which
	properly handles void pointer conversion.
 
	* gcc.c-torture/compile/pr37713.c: New testcase.

Added:
    trunk/gcc/testsuite/gcc.c-torture/compile/pr37713.c
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/testsuite/ChangeLog
    trunk/gcc/tree-ssa.c

Comment 5 Andrew Pinski 2008-10-02 20:49:41 UTC
This testcase fails on the trunk for x86-darwin with an ICE:
/Users/apinski/src/local/gcc/gcc/testsuite/gcc.c-torture/compile/pr37713.c:8: internal compiler error: in set_mem_alias_set, at emit-rtl.c:1784^M
 Please submit a full bug report,^M
with preprocessed source if appropriate.^M
See <http://gcc.gnu.org/bugs.html> for instructions.^M


Comment 6 Richard Biener 2008-10-02 21:32:28 UTC
Looks like expansion creates some weirdo MEM_ALIAS_SET for the target.  Some
RTL problem, not mine to investigate right now.
Comment 7 Ira Rosen 2008-10-07 11:25:51 UTC
This seems to be similar to the failure in PR 37385 (in set_mem_alias_set, at
emit-rtl.c:1789). There the ICE was because the lhs and the element type of rhs did not alias.