2008-10-02  Richard Guenther  <rguenther@suse.de>

PR middle-end/37713
	* tree-ssa.c (useless_type_conversion_p_1): For COMPLEX_TYPE
	and VECTOR_TYPE recurse with useless_type_conversion_p which
	properly handles void pointer conversion.
 
	* gcc.c-torture/compile/pr37713.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@140832 138bc75d-0d04-0410-961f-82ee72b054a4